# meno

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/: __init__.py
apps/api/: __init__.py  dependencies.py  main.py  schemas.py
apps/api/middleware/: __init__.py  auth.py
apps/api/routes/: __init__.py  context.py  knowledge.py  profiles.py  relationships.py  sessions.py  worker.py
apps/mcp/: __init__.py  __main__.py  auth.py  server.py  transport.py
apps/worker/: __init__.py  promotion_worker.py
cli/: __init__.py
cli/meno_cli/: __init__.py  detect.py  main.py  pyproject.toml
cli/meno_cli/commands/: __init__.py  capture.py  hooks.py  ingest.py  init.py  status.py
core/: __init__.py  auth.py  config.py  embeddings.py  llm.py  ranking.py  types.py
db/: __init__.py  base.py  session.py
db/migrations/: env.py
db/migrations/versions/: 332a4d6876d7_knowledge_intelligence_schema.py
db/models/: context.py  knowledge_object.py  relationship.py  session.py
docs/: MULTI_TOOL_SETUP.md
examples/: demo_continuity.py  demo_knowledge.py
knowledge/: __init__.py  context.py  extraction.py  relationships.py  retrieval.py  store.py  team_setup.py
mcp_clients/: antigravity.md  claude.md  codex.md  copilot.json  cursor_windsurf.md
memory/working/: redis_store.py
scratch/: debug_retrieval.py
sdk/: __init__.py
sdk/python/: __init__.py  pyproject.toml
sdk/python/meno/: __init__.py  client.py  models.py  types.py
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_continuity.py  test_extraction.py  test_knowledge.py  test_mcp_server.py  test_ranking.py  test_sdk.py  test_sessions.py
