# ==============================================================================
# (a) What this file is: Package configuration (pyproject.toml) for meno-cli.
# (b) What it does: Declares metadata, dependencies, and command line entry points.
# (c) How it fits into the MENO system: Installs the CLI application.
# ==============================================================================

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meno-cli"
version = "0.1.0"
description = "MENO CLI — persistent intelligence platform manager"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich",
    "tomlkit",
    "pyyaml"
]

[project.scripts]
meno = "meno_cli.main:app"

[tool.setuptools]
packages = ["meno_cli", "meno_cli.commands"]

[tool.setuptools.package-dir]
meno_cli = "."
"meno_cli.commands" = "commands"

