[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meno-sdk"
version = "0.2.0"
description = "MENO Python SDK"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["meno*"]
